css/index.scss
---
---
$panel-background: #2196f3;
$panel-box-shadow: 0px 0px 5px gray;
$border-radius: 2px;

html, body
{
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
  overflow: hidden;
}

.hidden {
  display: none !important;
}

.pulse {
  animation: pulsate 0.8s ease-out;
  animation-iteration-count: 3; 
  animation-delay: 3s;
}

@keyframes pulsate {
  0% {transform: scale(1, 1);}
  50% {transform: scale(0.8, 0.8);}
  100% {transform: scale(1, 1);}
}

.panel
{
  z-index: 2;
  position: absolute;
  top: 70px;
  padding: 10px;
  background: $panel-background;
  box-shadow: $panel-box-shadow;
}

.panel-left
{
  left: 20px;
}

.panel-right
{
  right: 20px;
}

.panel-bottom
{
  top: inherit;
  bottom: 20px;
}

.panel h2,
.panel h3,
.panel h4,
.panel h5,
.panel h6
{
  margin: 0;
}

.site-title
{
  font-size: 24px;
  font-weight: bold;
}

header
{
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  box-sizing: border-box;
  padding: 8px;
  height: 50px;
  background-color: $panel-background;
  box-shadow: 0px 0px 5px gray;
}

header .left
{
  float: left;
}

header .right
{
  float: right;
}

header .left > *,
header .right > *
{
  display: inline-block;
  vertical-align: bottom;
}

header .right > div
{
  padding: 5px;
}

header .header-space
{
  display: inline-block;
  width: 5px;
}

#loading
{
  display: none;
  padding: 5px;
  float: right;
}

.dragging
{
  cursor: none;
}

.dragging .panel,
.dragging header
{
  opacity: 0.2;
  pointer-events: none;
}

#tiles-container
{
  width: 240px;
  max-height: 600px;
  height: 80%;
}

#tiles-container .tiles
{
  height: calc(100% - 50px);
  overflow-y: scroll;
  padding: 0;
  padding-top: 5px;
}

#tiles-container .tiles li
{
  cursor: pointer;
  list-style-type: none;
  display: inline-block;
  padding-left: 5px;
}

#tiles-container .tiles li img
{
  pointer-events: none;
  width: 100px;
}

#tiles-container .tiles li:hover:not(.selected) img
{
  box-shadow: 0px 0px 10px #FFEA00;
}

#tiles-container .tiles li.selected img
{
  box-sizing: border-box;
  border: 2px solid #00FF14;
}

#controls-container hr
{
  border: 1px solid #555555;
  border-bottom-width: 0;
}

.button,
button
{
  &:focus
  {
    outline: none;
  }

  &:disabled,
  &.disabled
  {
    color: #444;
    background: #DDDDDD;
    box-shadow: 0px 0px 1px #DDDDDD;
    border-color: #C1C1C1;
  }


  &:not(:disabled)
  {
    &:hover
    {
      background: lightgray;
      border-color: #9E9E9E;
    }

    &:active,
    &.active
    {
      border-color: transparent;
      box-shadow: 0 0 0;
    }
  }

  &.fa
  {
    font-size: 18px;
    vertical-align: middle;
  }

  &, .button:visited
  {
    color: black;
    display: inline-block;
    min-height: 26px;
    text-transform: uppercase;
    background: #FFFFFF;
    border: 1px solid #E4E4E4;
    border-radius: $border-radius;
    box-shadow: 1px 1px 1px gray;
    padding: 1px 6px;
    box-sizing: border-box;
    font-size: 14px;
  }

  &.btn-success
  {
    background: #76ff03;
    border-color: #64dd17;

    &:not(:disabled):hover
    {
      background: #64dd17;
      border-color: #58BB18;
    }
  }

  &.btn-primary
  {
    background: #FFD400;
    border-color: #DCB700;

    &:not(:disabled):hover
    {
      background: #D2AE00;
      border-color: #B39500;
    }
  }

  &.btn-link
  {
    &,
    &:disabled,
    &.disabled,
    &:visited
    {
      border: 0;
      background: inherit;
      box-shadow: none;
      color: #0000EE;
    }

    &.disabled,
    &:disabled
    {
      color: #444;
    }

    &:hover
    {
      background: none;
      border: 0;
      text-decoration: underline;
    }
  }

  &.btn-rainbow
  {
    color: white;
    font-weight: bold;
    border-color: white;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff0000+0,ffff00+16,00ff00+32,00ffff+48,0000ff+64,ff00ff+80,ff0000+100 */
    background: #ff0000; /* Old browsers */
    background: -moz-linear-gradient(left,  #ff0000 0%, #ffff00 16%, #00ff00 32%, #00ffff 48%, #0000ff 64%, #ff00ff 80%, #ff0000 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ff0000), color-stop(16%,#ffff00), color-stop(32%,#00ff00), color-stop(48%,#00ffff), color-stop(64%,#0000ff), color-stop(80%,#ff00ff), color-stop(100%,#ff0000)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(left,  #ff0000 0%,#ffff00 16%,#00ff00 32%,#00ffff 48%,#0000ff 64%,#ff00ff 80%,#ff0000 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(left,  #ff0000 0%,#ffff00 16%,#00ff00 32%,#00ffff 48%,#0000ff 64%,#ff00ff 80%,#ff0000 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(left,  #ff0000 0%,#ffff00 16%,#00ff00 32%,#00ffff 48%,#0000ff 64%,#ff00ff 80%,#ff0000 100%); /* IE10+ */
    background: linear-gradient(to right,  #ff0000 0%,#ffff00 16%,#00ff00 32%,#00ffff 48%,#0000ff 64%,#ff00ff 80%,#ff0000 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#ff0000',GradientType=1 ); /* IE6-9 */

    &:not(:disabled):hover
    {
      border-color: white;
      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff8585+0,ffff85+16,85ff85+32,85ffff+48,8585ff+64,ff85ff+80,ff8585+100 */
      background: #ff8585; /* Old browsers */
      background: -moz-linear-gradient(left,  #ff8585 0%, #ffff85 16%, #85ff85 32%, #85ffff 48%, #8585ff 64%, #ff85ff 80%, #ff8585 100%); /* FF3.6+ */
      background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ff8585), color-stop(16%,#ffff85), color-stop(32%,#85ff85), color-stop(48%,#85ffff), color-stop(64%,#8585ff), color-stop(80%,#ff85ff), color-stop(100%,#ff8585)); /* Chrome,Safari4+ */
      background: -webkit-linear-gradient(left,  #ff8585 0%,#ffff85 16%,#85ff85 32%,#85ffff 48%,#8585ff 64%,#ff85ff 80%,#ff8585 100%); /* Chrome10+,Safari5.1+ */
      background: -o-linear-gradient(left,  #ff8585 0%,#ffff85 16%,#85ff85 32%,#85ffff 48%,#8585ff 64%,#ff85ff 80%,#ff8585 100%); /* Opera 11.10+ */
      background: -ms-linear-gradient(left,  #ff8585 0%,#ffff85 16%,#85ff85 32%,#85ffff 48%,#8585ff 64%,#ff85ff 80%,#ff8585 100%); /* IE10+ */
      background: linear-gradient(to right,  #ff8585 0%,#ffff85 16%,#85ff85 32%,#85ffff 48%,#8585ff 64%,#ff85ff 80%,#ff8585 100%); /* W3C */
      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8585', endColorstr='#ff8585',GradientType=1 ); /* IE6-9 */
    }
  }
}

.btn-group
{
  button, .button
  {
    &:not(:first-child)
    {
      margin-left: 0;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }

    &:not(:last-child)
    {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }
  }
}

#filter-container
{
  z-index: 5;
  position: absolute;
  right: 10px;
  text-align: right;

  .filter-content, #tile-filters-toggle-all
  {
    display: none;
  }

  #tile-filters-toggle-all
  {
    margin: 10px;
  }

  #tiles-filter-mode
  {
    text-align: center;
    padding-bottom: 5px;
  }

  #tile-filters
  {
    margin: 5px;
    padding: 5px;
    text-align: left;
    border-top: 1px solid black;
    border-bottom: 1px solid black;

    label
    {
      cursor: pointer;
      display: block;
    }
  }

  &.open
  {
    $background: white;

    background: $background;
    border: 1px solid white;
    border-radius: $border-radius;
    box-shadow: $panel-box-shadow;

    #tiles-filter-toggle
    {
      background: $background;
    }

    .filter-content, #tile-filters-toggle-all
    {
      display: block;
    }
  }
}

.examples-controls
{
  position: relative;
}

#examples-list
{
  display: none;
  position: absolute;
  top: 20px;
  min-width: 200px;
  height: 300px;
  background: white;
  border-radius: $border-radius;
  box-shadow: $panel-box-shadow;
  list-style-type: none;
  padding-left: 0;
  overflow-y: auto;

  .examples-list-item
  {
    position: relative;
    padding-bottom: 5px;
    
    &:not(:last-child)
    {
      border-bottom: 1px solid lightgray;
    }

    img
    {
      width: 100%;
    }

    a
    {
      position: absolute;
      right: 0;
      margin: 4px;
    }
  }

  &.open
  {
    display: block;
  }
}

.template
{
  display: none;
}

